fix(submission): fix submission statistics page pagination not center aligned

--- a/src/pages/submission/statistics/SubmissionStatisticsPage.module.less
+++ b/src/pages/submission/statistics/SubmissionStatisticsPage.module.less
@@ -13,6 +13,10 @@
   margin-bottom: 42px !important;
 }
 
+.pagination {
+  text-align: center;
+}
+
 .chartContainer {
   margin-top: 20px;
   height: 250px;
